Fix scrollbar accessibility, resolves #1

--- a/stylesheets/atom.less
+++ b/stylesheets/atom.less
@@ -11,8 +11,8 @@ atom-workspace,
 
 .scrollbars-visible-always {
 	/deep/ ::-webkit-scrollbar {
-		width: 5px;
-		height: 5px;
+		width: @scrollbar-size;
+		height: @scrollbar-size;
 	}
 
 	/deep/ ::-webkit-scrollbar-track,
