--- a/stylesheets/tree-view.less
+++ b/stylesheets/tree-view.less
@@ -9,6 +9,10 @@
 	}
 }
 
+.tree-view-resizer .treeview-resize-handle {
+	width: 7px;
+}
+
 .focusable-panel {
 	opacity: 1;
 
