--- a/stylesheets/ui-variables.less
+++ b/stylesheets/ui-variables.less
@@ -97,6 +97,7 @@
 @component-icon-size: 16px;
 @component-line-height: 25px;
 @component-border-radius: 0px;
+@scrollbar-size: 10px;
 
 @tab-height: 24px;
 
